--- a/dev/templates/index.jade
+++ b/dev/templates/index.jade
@@ -13,7 +13,6 @@ html(lang='en')
 
   body(style='background:#fff;')
     pre(style='background:#eee;font-size:18px;padding:20px;').
-    #chart(width='600', height='400')
-    br
-    br
-    #chart1(width='600', height='400')
+    .charts
+      .chart#liveChart
+      .chart#httpChart
